--- a/css/styles.css
+++ b/css/styles.css
@@ -339,7 +339,7 @@ header {
   fill: var(--main-icons-color);
   width: 100%;
   height: 100%;
-  border: 2px solid var(--main-icons-color);
+  border: 1px solid var(--main-icons-color);
   border-radius: 4px;
   display: flex;
   justify-content: center;
@@ -348,7 +348,7 @@ header {
 .clients-list-anker:hover,
 .clients-list-anker:focus {
   fill: var(--main-logo-button-color);
-  border: 2px solid var(--main-logo-button-color);
+  border: 1px solid var(--main-logo-button-color);
 }
 /* clients */
 
@@ -368,19 +368,16 @@ header {
 .portfolio-list {
   display: flex;
   flex-wrap: wrap;
-  margin-left: -30px;
-  margin-top: -30px;
+  gap: 30px;
 }
 .portfolio-list > .portfolio-item {
-  flex-basis: calc(100% / 3 - 30px);
+  flex-basis: calc((100% - 60px) / 3);
 }
-.portfolio-item {
-  margin-left: 30px;
-  margin-top: 30px;
-  min-width: 370px;
-  min-height: 404px;
+.portfolio-link {
+  display: block;
 }
-.portfolio-item:hover {
+.portfolio-link:hover,
+.portfolio-link:focus {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
     1px 4px 6px rgba(0, 0, 0, 0.16);
 }
@@ -435,11 +432,8 @@ header {
 }
 .footer-container {
   display: flex;
-  align-items: flex-start;
+  align-items: baseline;
   gap: 70px;
-}
-.footer-socials {
-  padding-top: 12px;
 }
 .logo-footer {
   font-family: "Raleway";
